--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
-  "name": "cliente_formulario_dinamico",
-  "version": "0.1",
-  "private": true,
+  "name": "@agc-desarrollo/cliente_formulario_dinamico",
+  "version": "1.0",
+  "description": "",
+  "main": "dist/library.js",
+  "module": "dist/library.mjs",
   "scripts": {
-    "dev": "vite --port 3000",
-    "build": "vite build",
-    "build_dev": "vite build --mode dev",
-    "build_prd": "vite build --mode prd",
-    "build_tst": "vite build --mode tst",
-    "serve": "vite preview",
-    "test:unit": "vue-cli-service test:unit"
+    "build": "rollup -c"
   },
-  "dependencies": {
-    "@greenborn/vue_json_form": "^0.1.53",
-    "bootstrap": "^5.2.3",
-    "core-js": "^3.8.3",
-    "primeicons": "^6.0.1",
-    "primevue": "^3.22.4",
-    "vue": "^3.2.13"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/agc-desarrollo/cliente_formulario_dinamico.git"
   },
+  "author": "AGC",
+  "license": "AGC",
+  "bugs": {
+    "url": "https://github.com/agc-desarrollo/cliente_formulario_dinamico/issues"
+  },
+  "homepage": "https://github.com/agc-desarrollo/cliente_formulario_dinamico#readme",
   "devDependencies": {
-    "@vitejs/plugin-vue": "3.0.3",
-    "sass": "^1.50.0",
-    "vite": "^3.0.4"
+    "rollup": "^2.79.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-vue": "^6.0.0",
+  },
+  "files": [
+    "dist/*",
+    "examples/*"
+  ],
+  "dependencies": {
+    "bootstrap": "^5.1.3",
+    "primevue": "^3.22.4",
+    "primeicons": "^6.0.1",
+    "vue": "^3.2.21"
   }
 }
