--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@agc-desarrollo/cliente_formulario_dinamico",
-  "version": "1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "dist/library.js",
   "module": "dist/library.mjs",
@@ -21,15 +21,15 @@
     "rollup": "^2.79.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-vue": "^6.0.0",
+    "@rollup/plugin-terser": "^0.4.0"
   },
   "files": [
-    "dist/*",
-    "examples/*"
+    "dist/*"
   ],
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "primevue": "^3.22.4",
     "primeicons": "^6.0.1",
+    "primevue": "^3.22.4",
     "vue": "^3.2.21"
   }
 }
