--- a/develop/package.json
+++ b/develop/package.json
@@ -13,8 +13,7 @@
     "core-js": "^3.8.3",
     "primeicons": "^6.0.1",
     "primevue": "^3.22.4",
-    "vue": "^3.2.13",
-    "vue-formulario-json": "^0.1.34"
+    "vue": "^3.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
