--- a/develop/package.json
+++ b/develop/package.json
@@ -11,6 +11,7 @@
     "@agc-desarrollo/cliente_formulario_dinamico": "0.1.2",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "dotenv": "^16.0.3",
     "primeicons": "^6.0.1",
     "primevue": "^3.22.4",
     "vue": "^3.2.13"
