--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
   },
   "homepage": "https://github.com/agc-desarrollo/cliente_formulario_dinamico#readme",
   "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.0",
     "rollup": "^2.79.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-vue": "^6.0.0",
-    "@rollup/plugin-terser": "^0.4.0"
+    "rollup-plugin-vue": "^6.0.0"
   },
   "files": [
     "dist/*"
   ],
   "dependencies": {
+    "axios": "^1.3.4",
     "bootstrap": "^5.1.3",
     "primeicons": "^6.0.1",
     "primevue": "^3.22.4",
