--- a/develop/package.json
+++ b/develop/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^16.0.3",
     "primeicons": "^6.0.1",
     "primevue": "^3.22.4",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
