--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "dist/*"
   ],
   "dependencies": {
+    "@rollup/plugin-typescript": "^11.0.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.1.3",
     "primeicons": "^6.0.1",
     "primevue": "^3.22.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "vue": "^3.2.21"
   }
 }
